
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-rc-1 ($LastChangedRevision$, $LastChangedDate$)
====================================
- Removed unnecessary and problematic editor dropdown in chunk editing screen
- Sped up drag/drop of reordering in tree by now only framing moved nodes instead of refreshing
- Added modRequest::getParameters() method for retrieving various GPC variables or arrays of variables; automatically strips MODx GET parameters as necessary
- modRequest::__construct() now creates references to all GPC variables in modRequest::$parameters
- Modified modX::makeUrl()/modContext::makeUrl() to accept query string parameters as an array or string
- Added modX::toQueryString() static method to turn associative array into a valid query string
- [#MODX-1709] Fixed issue with encoding of action button parameter
- [#MODX-1554] Prevented uploading of files to files themselves in directory tree
- [#MODX-1700] Fixed issue with text referencing setting in lexicon entry
- Ensure tags in a Static Resource content are parsed before trying to load the source path
- Fixed static/weblink update js
- Removed unnecessary and redundant table prefix check later on in setup
- Fixed css/js properties in TV tab to let RTEs auto-determine the height of their TD fields
- Fixed missing permissions reference on resource controllers
- Added OnHandleRequest to modManagerRequest::handleRequest
- Properly hides UI elements for Resource buttons/pages if user doesnt have permissions 
- Refactored modResource::cleanAlias() to allow various options, including built-in and custom transliteration capabilities
- [#MODX-717] Foreign characters (UTF8 data) needlessly removed from alias
- Hide top menu items if there are no submenus and if the topmenu is not clickable