@@ -671,6 +671,7 @@
         <field key="fax" dbtype="varchar" precision="100" phptype="string" null="false" default="" />
         <field key="photo" dbtype="varchar" precision="255" phptype="string" null="false" default="" />
         <field key="comment" dbtype="varchar" precision="255" phptype="string" null="false" default="" />
+        <field key="website" dbtype="varchar" precision="255" phptype="string" null="false" default="" />
         
         <aggregate alias="User" class="modUser" local="internalKey" foreign="id" cardinality="one" owner="foreign" />
         <aggregate alias="UserRole" class="modUserRole" local="role" foreign="id" cardinality="one" owner="foreign" />
